2015-08-18  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * *: reverted load-into-counting.py -> load-into-countgraph.py and
   load-graph.py -> load-into nodegraph.py rename.
   * CITATION: unescaped URL
   * doc/user/guide.rst: added `:program:` and `:option:` directives as
   needed; replaced references to `strip-and-split-for-assembly` with
   `extract-paired-reads`. Updated instructions to use `--unpaired-reads` with
   `normalize-by-median.py` instead of second round of diginorm.

2015-08-18  Titus Brown  <titus@idyll.org>

   * doc/index.rst: update introductory text.
   * doc/user/biblio.rst: update bibliography link descriptions and text.
   * doc/_static/labibi.css: reference new location of base CSS

2015-08-14  Luiz Irber  <khmer@luizirber.org>

   * scripts/unique-kmers.py: Rename option --stream-out to --stream-records.
   * tests/test_streaming_io.py: Fix unique-kmers tests, use new option.
   * khmer/_khmer.cc, lib/hllcounter.cc: Rename some variables for consistency.

2015-08-12  Jacob Fenton  <bocajnotnef@gmail.com>

   * doc/dev/{codebase-guide,coding-guidelines-and-review,development,
   for-khmer-developers,getting-started,release,scripts-and-sandbox,
   binary-file-formats}.rst,doc/{index,introduction,whats-new-2.0,
   contributors}.rst,doc/user/{blog-posts,choosing-table-sizes,galaxy,
   getting-help,guide,install,known-issues,partitioning-big-data,
   scripts}.rst,CITATION: Cleaned up documentation
   * scripts/*.py, khmer/khmer_args.py: added epilog sanitation
   * scripts/{load-into-counting,load-graph,load-into-countgraph,
   load-into-nodegraph}.py, tests/{test_scripts,test_normalize_by_median,
   test_streaming_io,test_countgraph}: renamed load-into-counting -> 
   load-into-countgraph, load-graph -> load-into-nodegraph, fixed tests to not
   bork

2015-08-12  Luiz Irber  <khmer@luizirber.org>

   * khmer/_khmer.cc: Fix a GCC string initialization warning.

2015-08-12  Michael R. Crusoe  <crusoe@ucdavis.edu>
